--- a/lwc/blaBlaBla/blaBlaBla.html
+++ b/lwc/blaBlaBla/blaBlaBla.html
@@ -1,10 +1,10 @@
 <template>
-<lightning-record-form
-        record-id={recordId}
-        object-api-name={Product__c}
-        fields={Name}
-        columns="2"
-        mode="edit"
-        onsubmit={handleSubmit}>
-</lightning-record-form>
-</template>
+        <lightning-record-view-form record-id={recordId} object-api-name="Product__c">
+            <div class="slds-box">
+                <lightning-output-field field-name="Name"></lightning-output-field>
+                <lightning-output-field field-name="Description__c"></lightning-output-field>
+                <lightning-output-field field-name="Type__c"></lightning-output-field>
+                <lightning-output-field field-name="Family__c"></lightning-output-field>
+            </div>
+        </lightning-record-view-form>
+    </template>
